Show crashed image icons in summary windows during game mode, if object crashed
After 10 seconds of no arrows key pressing, pop up the "press arrow keys icon"
Removed workaround that checked the result hashmap before applying game logic
Move object into house (between layers) on successful delivery
Fixed: Door only partly opens on second play through
Set ramp angle slider maximum to 80 degrees
Converted vector component selection controls from checkboxes to radio buttons in Coordinate Frames tab
Fixed: Fire dog water drops appear below the fire dog
Fixed: when dragging the rightmost wall, it snaps the ramp to be at the mouse location
Add energy conservation on airbone -> ground crash by dissipating extra energy into heat
Fixed: Object remains broken after crashing when you hit playback
Added a "sec" label to the time charts
Show friction force below applied force when they would otherwise overlap
Made it possible to set vector label offset orientations
Added tick marks to the applied force slider to make the knob bigger
Added a raised bevel border to the applied force slider
Limited coordinate frame angle to 80 degrees
Limited ramp angle to 80 degrees
Fixed: Mystery object does not break apart.
Made it so you can't zoom out the graphs further than 20 seconds by graying out the horizontal zoom buttons, see #2361
Made it so that dragging the rightmost wall rotates the ramp angle.
Made sure energy is exactly conserved while object is airborne
Fixed: Kinetic energy doesn't update while object is in the air on bar chart or line chart
Removed point of origin vector visualization option from the control panel.
Fixed: during playback, value readouts to the left of chart do not update
Set the cursor to be a hand in the free body diagram node
Moved the "show energy graph" button to the play area, and made it disappear when the chart appears
Renamed Ramp to Ramp II: Forces in 2D, resolves #2054
# 1.03.64 (40652) May 12, 2010
Made coordinate frame graphic handle grabbable